# django-helpdesk

./: .gitignore  0041_doltdesk_agents.py  API.md  API_AUTH_TROUBLESHOOTING.md  API_CLIENT_DEMO.md  CLAUDE.md  LOGGING.md  Makefile  SESSION_AUTH_SETUP.md  api_client.py  api_login.py  create_token.py  test_api_simple.py  test_session_auth.py
demo/demodesk/config/: settings.py  urls.py
demo/demodesk/fixtures/: demo.json  users.json  usersettings.json
doltdesk-api/: README.md  auth.go  context.go  go.mod  go.sum
doltdesk-api/cmd/doltdesk-api/: auth.go  context.go  errors.go  main.go
doltdesk-api/db/: db.go
doltdesk-api/db/utils/: branch_tracker.go  migrate.go  tx.go
helpdesk/: admin.py  authentication.py  middleware.py  models.py  signals.py  urls.py  user.py
helpdesk/management/commands/: dolt_commit.py
helpdesk/migrations/: 0040_alter_kbitem_remove_order_check.py  0041_add_is_agent_field.py  0042_pull_requests.py  0043_finish_session_stored_proc.py  0044_merge_pr_stored_proc.py
helpdesk/templates/helpdesk/: navigation-sidebar.html  pullrequest_detail.html  pullrequest_discard_confirm.html  pullrequest_index.html  pullrequest_merge_confirm.html  pullrequest_reopen_confirm.html
helpdesk/templatetags/: helpdesk_staff.py
helpdesk/views/: api.py  staff.py
mcp-server/: .env.example  README.md  helpdesk.py  main.py  package.json  pyproject.toml  test_connection.py  test_mcp_server.py
mcp-server-ts/: README.md  package-lock.json  package.json
mcp-server-ts/src/: index.ts
