[project]
name = "django-helpdesk-mcp"
version = "0.1.0"
description = "MCP server for django-helpdesk API integration"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.9.4",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "python-dotenv>=1.0.0",
]

[project.scripts]
django-helpdesk-mcp = "helpdesk:main"
